# apparel-preview

./: .gitignore  CHANGELOG.md  CMakeLists.txt  KNOWN-ISSUES.md  README.md  THIRD-PARTY-NOTICES.md  vcpkg.json
fomod/: ModuleConfig.xml  info.xml
nexus/: DESCRIPTION.bbcode
src/: BipedHooks.cpp  BipedHooks.h  DIIIIntegration.cpp  DIIIIntegration.h  HoverTracker.cpp  HoverTracker.h  InputListener.cpp  InputListener.h  ListMarker.cpp  ListMarker.h  MenuWatcher.cpp  MenuWatcher.h  NavButton.cpp  NavButton.h  PreviewSession.cpp  PreviewSession.h  PreviewSet.h  REAugments.cpp  REAugments.h  Settings.cpp  Settings.h  SettingsUI.cpp  SettingsUI.h  VersionCheck.cpp  VersionCheck.h  plugin.cpp
tests/: test_preview_set.cpp
tools/: build.bat  make_fomod.sh  make_icon_swf.py  package.sh
